fix: bottom aligned

--- a/packages/openbridge-webcomponents/src/ar/poi-layer/poi-layer.css
+++ b/packages/openbridge-webcomponents/src/ar/poi-layer/poi-layer.css
@@ -60,13 +60,13 @@
 
 ::slotted(obc-poi-target[data-behind]) {
   opacity: 0.4;
-  --poi-size: 28px;
+  --poi-size: 32px;
   --obc-poi-target-icon-opacity: 0;
 }
 
 ::slotted(obc-poi-target[data-exiting]) {
   opacity: 0.4;
-  --poi-size: 28px;
+  --poi-size: 32px;
   --obc-poi-target-icon-opacity: 0;
 }
 
